; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_sha3.c_shuffle_in.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_sha3.c_shuffle_in.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @shuffle_in to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @shuffle_in(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = ashr i32 %5, 8
  %7 = xor i32 %4, %6
  %8 = and i32 %7, 65280
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* %3, align 4
  %11 = xor i32 %9, %10
  %12 = load i32, i32* %3, align 4
  %13 = shl i32 %12, 8
  %14 = xor i32 %11, %13
  store i32 %14, i32* %2, align 4
  %15 = load i32, i32* %2, align 4
  %16 = load i32, i32* %2, align 4
  %17 = ashr i32 %16, 4
  %18 = xor i32 %15, %17
  %19 = and i32 %18, 15728880
  store i32 %19, i32* %3, align 4
  %20 = load i32, i32* %2, align 4
  %21 = load i32, i32* %3, align 4
  %22 = xor i32 %20, %21
  %23 = load i32, i32* %3, align 4
  %24 = shl i32 %23, 4
  %25 = xor i32 %22, %24
  store i32 %25, i32* %2, align 4
  %26 = load i32, i32* %2, align 4
  %27 = load i32, i32* %2, align 4
  %28 = ashr i32 %27, 2
  %29 = xor i32 %26, %28
  %30 = and i32 %29, 202116108
  store i32 %30, i32* %3, align 4
  %31 = load i32, i32* %2, align 4
  %32 = load i32, i32* %3, align 4
  %33 = xor i32 %31, %32
  %34 = load i32, i32* %3, align 4
  %35 = shl i32 %34, 2
  %36 = xor i32 %33, %35
  store i32 %36, i32* %2, align 4
  %37 = load i32, i32* %2, align 4
  %38 = load i32, i32* %2, align 4
  %39 = ashr i32 %38, 1
  %40 = xor i32 %37, %39
  %41 = and i32 %40, 572662306
  store i32 %41, i32* %3, align 4
  %42 = load i32, i32* %2, align 4
  %43 = load i32, i32* %3, align 4
  %44 = xor i32 %42, %43
  %45 = load i32, i32* %3, align 4
  %46 = shl i32 %45, 1
  %47 = xor i32 %44, %46
  store i32 %47, i32* %2, align 4
  %48 = load i32, i32* %2, align 4
  ret i32 %48
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
